--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here http://doc.crates.io/guide.html#cargotoml-vs-cargolock
 Cargo.lock
+
+# IDE stuff
+.vscode
+
+# Project scripts
+scripts/
