--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ rustc-serialize = "*"
 router = "0.1.1"
 logger = "0.0.3"
 walkdir = "0.1.5"
+horrorshow = "0.5.5"
 
 [build-dependencies]
 walkdir = "0.1.5"
