--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ logger = "0.0.3"
 walkdir = "0.1.5"
 horrorshow = "0.5.5"
 mopa = "0.2.2"
+docopt = "0.6"
 
 [build-dependencies]
 walkdir = "0.1.5"
